<resources>
    <string name="app_name">DECk Deals</string>

    <string name="map_key">AIzaSyBaKsyTPDKIm5v0lHzeeQ7sG85JiTtj8cY</string>

    <string name="your_name_here">Your Name Here</string>
    <string name="dummy_text">Dummy Text</string>

    <string name="delete">Delete</string>
    <string name="archive">Archive</string>

    <string-array name="brand_name">
        <item>Lotto</item>
        <item>Bata</item>
        <item>Apex</item>
        <item>Bay</item>
        <item>Nike</item>
        <item>Addidas</item>
        <item>Hush Puppies</item>
    </string-array>
    <string name="title_activity_nav">NavActivity</string>
    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>
    <string name="nav_header_title">Android Studio</string>
    <string name="nav_header_subtitle">android.studio@android.com</string>
    <string name="nav_header_desc">Navigation header</string>
    <string name="action_settings">Settings</string>

    <string name="menu_home">Home</string>
    <string name="menu_gallery">Gallery</string>
    <string name="menu_slideshow">Slideshow</string>
    <string name="rating_message">Hi Alica, how many stars would you like to rate this DECK?</string>
    <string name="done">Done</string>
    <string name="todo">TODO</string>
    <string name="deals">deals</string>
    <string name="_6">6</string>
    <string name="deck_points">DECK points</string>
    <string name="_000">000</string>
    <string name="title_activity_arial_distance">Map</string>
    <string name="open">open</string>
    <string name="close">close</string>
</resources>