<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".Activity.MainActivity">

    <androidx.constraintlayout.widget.ConstraintLayout
        android:id="@+id/constraintLayoutId"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent">

        <TextView
            android:id="@+id/dealsTvId"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="16dp"
            android:gravity="bottom"
            android:text="@string/deals"
            app:layout_constraintEnd_toStartOf="@+id/dealsCountTvId"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent" />

        <TextView
            android:id="@+id/dealsCountTvId"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="8dp"
            android:text="@string/_6"
            android:textColor="@color/colorPrimary"
            android:textSize="18sp"
            app:layout_constraintBottom_toBottomOf="@id/dealsTvId"
            app:layout_constraintEnd_toStartOf="@+id/deckPointsTvId"
            app:layout_constraintStart_toEndOf="@id/dealsTvId" />

        <TextView
            android:id="@+id/deckPointsTvId"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="16dp"
            android:text="@string/deck_points"
            app:layout_constraintBottom_toBottomOf="@id/dealsCountTvId"
            app:layout_constraintEnd_toStartOf="@+id/deckPointsCountTvId"
            app:layout_constraintStart_toEndOf="@id/dealsCountTvId" />

        <TextView
            android:id="@+id/deckPointsCountTvId"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="8dp"
            android:text="@string/_000"
            android:textColor="@color/colorPrimary"
            android:textSize="24sp"
            app:layout_constraintBottom_toBottomOf="@id/deckPointsTvId"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toEndOf="@id/deckPointsTvId" />


    </androidx.constraintlayout.widget.ConstraintLayout>

    <androidx.constraintlayout.widget.ConstraintLayout
        android:id="@+id/constraintLayoutSecId"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        app:layout_constraintEnd_toEndOf="@id/constraintLayoutId"
        app:layout_constraintStart_toStartOf="@id/constraintLayoutId"
        app:layout_constraintTop_toBottomOf="@id/constraintLayoutId">


        <ImageView
            android:id="@+id/nav_menue_icon_id"
            android:layout_width="26dp"
            android:layout_height="26dp"
            android:layout_marginTop="16dp"
            android:contentDescription="@string/todo"
            android:src="@drawable/ic_menu_red"
            app:layout_constraintEnd_toStartOf="@id/super_deck_icon_id"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent" />

        <ImageView
            android:id="@+id/super_deck_icon_id"
            android:layout_width="26dp"
            android:layout_height="26dp"
            android:layout_marginStart="16dp"
            android:layout_marginEnd="16dp"
            android:contentDescription="@string/todo"
            android:src="@drawable/ic_super_deck"
            app:layout_constraintEnd_toStartOf="@id/new_icon_id"
            app:layout_constraintStart_toEndOf="@id/nav_menue_icon_id"
            app:layout_constraintTop_toTopOf="@id/nav_menue_icon_id" />

        <ImageView
            android:id="@+id/new_icon_id"
            android:layout_width="26dp"
            android:layout_height="26dp"
            android:contentDescription="@string/todo"
            android:src="@drawable/ic_new_red"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toEndOf="@id/super_deck_icon_id"
            app:layout_constraintTop_toTopOf="@id/super_deck_icon_id" />


    </androidx.constraintlayout.widget.ConstraintLayout>

    <com.yuyakaido.android.cardstackview.CardStackView
        android:id="@+id/card_stack_view"
        android:layout_width="0dp"
        android:layout_height="0dp"
        android:clipToPadding="false"
        android:paddingStart="46dp"
        android:paddingTop="91dp"
        android:paddingEnd="46dp"
        android:paddingBottom="91dp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <androidx.constraintlayout.widget.ConstraintLayout
        android:id="@+id/iconBundleClId"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        app:layout_constraintBottom_toTopOf="@id/backFBid"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/constraintLayoutSecId">

        <com.google.android.material.floatingactionbutton.FloatingActionButton
            android:id="@+id/zoomFbId"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginBottom="16dp"
            android:backgroundTint="#874029"
            android:contentDescription="@string/todo"
            android:src="@drawable/ic_full_screen"
            app:borderWidth="0dp"
            app:elevation="6dp"
            app:fabSize="normal"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent"
            app:tint="@color/white" />

        <com.google.android.material.floatingactionbutton.FloatingActionButton
            android:id="@+id/ratingFbId"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="4dp"
            android:backgroundTint="#FF9800"
            android:contentDescription="@string/todo"
            android:onClick="goToDeckRatingActivity"
            android:src="@drawable/ic_baseline_star_rate_24"
            app:borderWidth="0dp"
            app:elevation="6dp"
            app:fabSize="normal"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="0.281"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@id/zoomFbId"
            app:tint="@color/white" />

        <com.google.android.material.floatingactionbutton.FloatingActionButton
            android:id="@+id/urlFbId"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginBottom="16dp"
            android:backgroundTint="#B50404"
            android:contentDescription="@string/todo"
            android:onClick="goToWebSite"
            android:src="@drawable/ic_vn1_weblink"
            app:borderWidth="0dp"
            app:elevation="6dp"
            app:fabSize="normal"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toEndOf="@id/ratingFbId"
            app:layout_constraintTop_toTopOf="@id/ratingFbId"
            app:tint="@color/white" />

        <com.google.android.material.floatingactionbutton.FloatingActionButton
            android:id="@+id/cancelFbId"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="4dp"
            android:layout_marginEnd="6dp"
            android:backgroundTint="#E91E63"
            android:contentDescription="@string/todo"
            android:onClick="hideDisplayIcon"
            android:src="@drawable/ic_delete32px"
            app:borderWidth="0dp"
            app:elevation="6dp"
            app:fabSize="normal"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="0.0"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@id/ratingFbId"
            app:tint="@color/white" />

        <com.google.android.material.floatingactionbutton.FloatingActionButton
            android:id="@+id/directilonFbId"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginLeft="16dp"
            android:layout_marginRight="16dp"
            android:layout_marginBottom="16dp"
            android:backgroundTint="#FF5722"
            android:contentDescription="@string/todo"
            android:onClick="goToArialDistanceActivity"
            android:src="@drawable/ic_direction_arrow_white"
            app:borderWidth="0dp"
            app:elevation="6dp"
            app:fabSize="normal"
            app:layout_constraintEnd_toStartOf="@id/callFbId"
            app:layout_constraintStart_toEndOf="@id/cancelFbId"
            app:layout_constraintTop_toTopOf="@id/cancelFbId"
            app:tint="@color/white" />

        <com.google.android.material.floatingactionbutton.FloatingActionButton
            android:id="@+id/callFbId"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:backgroundTint="#673AB7"
            android:contentDescription="@string/todo"
            android:src="@drawable/ic_phone_call"
            app:borderWidth="0dp"
            app:elevation="6dp"
            app:fabSize="normal"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toEndOf="@id/directilonFbId"
            app:layout_constraintTop_toTopOf="@id/directilonFbId"
            app:tint="@color/white" />

    </androidx.constraintlayout.widget.ConstraintLayout>


    <com.google.android.material.floatingactionbutton.FloatingActionButton
        android:id="@+id/backFBid"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginBottom="16dp"
        android:backgroundTint="@color/white"
        android:contentDescription="@string/todo"
        android:src="@drawable/ic_undo_red"
        app:borderWidth="0dp"
        app:elevation="6dp"
        app:fabSize="normal"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toStartOf="@id/refreshFBid"
        app:layout_constraintStart_toStartOf="parent"
        app:tint="#B50404" />

    <com.google.android.material.floatingactionbutton.FloatingActionButton
        android:id="@+id/refreshFBid"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginBottom="16dp"
        android:backgroundTint="@color/white"
        android:contentDescription="@string/todo"
        android:src="@drawable/ic_master_restart"
        app:borderWidth="0dp"
        app:elevation="6dp"
        app:fabSize="normal"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toStartOf="@id/gridFBid"
        app:layout_constraintStart_toEndOf="@id/backFBid"
        app:tint="#B50404" />

    <com.google.android.material.floatingactionbutton.FloatingActionButton
        android:id="@+id/gridFBid"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginBottom="16dp"
        android:backgroundTint="@color/white"
        android:contentDescription="@string/todo"
        android:src="@drawable/ic_baseline_grid_view_24"
        app:borderWidth="0dp"
        app:elevation="6dp"
        app:fabSize="normal"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toStartOf="@id/fileFBid"
        app:layout_constraintStart_toEndOf="@id/refreshFBid"
        app:tint="#B50404" />

    <com.google.android.material.floatingactionbutton.FloatingActionButton
        android:id="@+id/fileFBid"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginBottom="16dp"
        android:backgroundTint="@color/white"
        android:contentDescription="@string/todo"
        android:src="@drawable/ic_clip_blue"
        app:borderWidth="0dp"
        app:elevation="6dp"
        app:fabSize="normal"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toStartOf="@id/locationFBid"
        app:layout_constraintStart_toEndOf="@id/gridFBid"
        app:tint="#015DA6" />

    <com.google.android.material.floatingactionbutton.FloatingActionButton
        android:id="@+id/locationFBid"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginBottom="16dp"
        android:backgroundTint="@color/white"
        android:contentDescription="@string/todo"
        android:onClick="goToDirectionActivity"
        android:src="@drawable/ic_fence_on"
        app:borderWidth="0dp"
        app:elevation="6dp"
        app:fabSize="normal"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toEndOf="@id/fileFBid"
        app:tint="#B50404" />

</androidx.constraintlayout.widget.ConstraintLayout>